[gd_scene load_steps=32 format=3 uid="uid://tsbefmiro8lh"]

[ext_resource type="PackedScene" uid="uid://din6t3fv4n6pv" path="res://FBXRaw/PlateSingle.fbx" id="1_52jp6"]
[ext_resource type="Script" path="res://ingredients/plate.gd" id="2_lbwt3"]
[ext_resource type="PackedScene" uid="uid://h0fccvfrm8gl" path="res://FBXRaw/BreadBottom.fbx" id="3_e3ftj"]
[ext_resource type="Texture2D" uid="uid://co6hlmfrqbcxo" path="res://Textures/BreadBottom_standardSurface1_BaseColor.png" id="4_233gv"]
[ext_resource type="PackedScene" uid="uid://cm8dfmol45dx" path="res://FBXRaw/Patty.fbx" id="4_usue2"]
[ext_resource type="PackedScene" uid="uid://dp5lxp4uvmtbt" path="res://FBXRaw/OnionSlice.fbx" id="5_6nyhf"]
[ext_resource type="PackedScene" uid="uid://cxe1innv7wc2v" path="res://FBXRaw/LettuceSlice.fbx" id="6_ar07p"]
[ext_resource type="PackedScene" uid="uid://dmutgofk6xtat" path="res://FBXRaw/TomatoSlice.fbx" id="7_myktt"]
[ext_resource type="PackedScene" uid="uid://dvybiyvc3wtj3" path="res://FBXRaw/CheeseSlice.fbx" id="8_wmfhp"]
[ext_resource type="PackedScene" uid="uid://bw31yrrelid6e" path="res://FBXRaw/FryWBox.fbx" id="10_c2qvc"]
[ext_resource type="PackedScene" uid="uid://edc5wxauuvws" path="res://FBXRaw/BreadTopp.fbx" id="10_oldcs"]
[ext_resource type="Script" path="res://ingredients/reset_temp.gd" id="11_efj2f"]
[ext_resource type="Texture2D" uid="uid://cu02ww716qbw2" path="res://Textures/BreadTopp_standardSurface1_BaseColor.png" id="11_id26x"]
[ext_resource type="PackedScene" uid="uid://diq8qyoqanncm" path="res://FBXRaw/SodaBottle.fbx" id="12_xihcy"]
[ext_resource type="Texture2D" uid="uid://bcfp818ppxmq0" path="res://Textures/soda_bottle_UV_soda_bottleSG_BaseColor.png" id="13_3f51r"]
[ext_resource type="PackedScene" uid="uid://cvsdtf8fxcpi2" path="res://FBXRaw/ChipBag.fbx" id="14_qrakg"]
[ext_resource type="Texture2D" uid="uid://ckta3svl1gefc" path="res://Textures/ChipBag_standardSurface1_BaseColor.png" id="15_b28ad"]
[ext_resource type="Texture2D" uid="uid://caj18fs5bqc0w" path="res://Textures/FryWBox_standardSurface1_BaseColor.png" id="16_fbqht"]
[ext_resource type="Texture2D" uid="uid://cvylco8mll464" path="res://Textures/FriesIndiv_standardSurface1_BaseColor.png" id="17_ggfmk"]
[ext_resource type="Script" path="res://ingredients/clear_plate.gd" id="21_hcyh8"]
[ext_resource type="PackedScene" uid="uid://bbj7px7l6an41" path="res://FBXRaw/hotdog_bun.fbx" id="22_8mlvg"]
[ext_resource type="PackedScene" uid="uid://vafop1gyn3j5" path="res://FBXRaw/full hotdog.fbx" id="23_jc7b7"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_rf0rk"]
height = 0.233957
radius = 0.136671

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ynu4e"]
albedo_texture = ExtResource("4_233gv")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5tq15"]
albedo_texture = ExtResource("11_id26x")

[sub_resource type="BoxShape3D" id="BoxShape3D_73yg8"]
size = Vector3(0.166275, 0.221512, 0.1604)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ubcov"]
albedo_texture = ExtResource("13_3f51r")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_p0vgt"]
albedo_texture = ExtResource("15_b28ad")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cbeqh"]
albedo_texture = ExtResource("16_fbqht")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dysfr"]
albedo_color = Color(0.796078, 0.67451, 0, 1)
albedo_texture = ExtResource("17_ggfmk")

[sub_resource type="BoxShape3D" id="BoxShape3D_sf3ox"]
size = Vector3(0.170532, 0.152191, 0.188507)

[node name="Node3D" type="Node3D"]

[node name="Root Scene" parent="." instance=ExtResource("1_52jp6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0119846, 0, -0.0112032)

[node name="Plates1" parent="Root Scene/RootNode/Stack" index="0"]
transform = Transform3D(31.524, 0, 0, 0, 1.0643, 0, 0, 0, 31.524, -3.5425, -2.43644, -12.4178)

[node name="StaticBody3D" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00946522, 0.0879455, 0)
script = ExtResource("2_lbwt3")

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("CylinderShape3D_rf0rk")

[node name="bottom_bun" parent="." instance=ExtResource("3_e3ftj")]
visible = false

[node name="Burger" parent="bottom_bun/RootNode/Truck" index="0"]
transform = Transform3D(0.91124, 0, 0, 0, 0.7038, 0, 0, 0, 0.91124, 0, 0, 0)

[node name="BreadBot" parent="bottom_bun/RootNode/Truck/Burger" index="0"]
transform = Transform3D(9.44901, 0, 0, 0, -1.69796, -4.73155e-14, 0, 8.50245e-15, -9.44901, 0.0425828, 0.0122768, 0.0290971)
material_override = SubResource("StandardMaterial3D_ynu4e")

[node name="patty" parent="." instance=ExtResource("4_usue2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00298288, 0, 0.0182021)
visible = false

[node name="Patty" parent="patty/RootNode/Truck/Burger" index="0"]
transform = Transform3D(9.10476, 0, 0, 0, 1.85537, 0, 0, 0, 9.42806, 0.365892, -0.138856, -1.19824)

[node name="onions" parent="." instance=ExtResource("5_6nyhf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00298288, 0, 0.0182021)
visible = false

[node name="Truck" parent="onions/RootNode" index="0"]
transform = Transform3D(1.9899, 0, 0, 0, 2.57641, 0, 0, 0, 1.9899, 0.00358474, -0.00995583, -0.0136705)

[node name="Onion" parent="onions/RootNode/Truck/Burger" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.38385, -0.617841, -1.71342)

[node name="lettuce" parent="." instance=ExtResource("6_ar07p")]
transform = Transform3D(0.930422, 0, 0, 0, 1, 0, 0, 0, 0.82989, 0.00298288, 0, 0.0350858)
visible = false

[node name="Letteuce" parent="lettuce/RootNode/Truck/Burger" index="0"]
transform = Transform3D(6.77962, 0, 0, 0, 0.202736, 0, 0, 0, 6.77962, 0.376407, -0.113795, -1.20373)

[node name="tomatoes" parent="." instance=ExtResource("7_myktt")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0172161, 0, 0.000599876)
visible = false

[node name="RootNode" parent="tomatoes" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0528433, -0.0463629, 0.136545)

[node name="Tomato" parent="tomatoes/RootNode/Truck/Burger" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.404672, -0.572577, -1.7549)

[node name="cheese" parent="." instance=ExtResource("8_wmfhp")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00298288, 0, 0.0182021)
visible = false

[node name="Cheese" parent="cheese/RootNode/Truck/Burger" index="0"]
transform = Transform3D(7.9664, 0, -2.89953, 0, 0.511897, 0, 2.89953, 0, 7.9664, 0.368372, -0.10444, -1.19994)

[node name="top_bun" parent="." instance=ExtResource("10_oldcs")]
visible = false

[node name="Burger" parent="top_bun/RootNode/Truck" index="0"]
transform = Transform3D(0.91124, 0, 0, 0, 0.7038, 0, 0, 0, 0.91124, 0, 0, 0)

[node name="BreadTop" parent="top_bun/RootNode/Truck/Burger" index="0"]
transform = Transform3D(8.47766, 0, 0, 0, 2.20425, 0, 0, 0, 8.47766, 0.0423815, 0.0583715, 0.0221755)
material_override = SubResource("StandardMaterial3D_5tq15")

[node name="resetTemp" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.760155, 0.110318, 0.0561066)
script = ExtResource("11_efj2f")

[node name="CollisionShape3D" type="CollisionShape3D" parent="resetTemp"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0699635, 0.0151152, -0.0296969)
shape = SubResource("BoxShape3D_73yg8")

[node name="Label3D" type="Label3D" parent="resetTemp"]
transform = Transform3D(-0.297279, 0, -8.74228e-08, 0, 0.414358, 0, 2.5989e-08, 0, -1, 0.067137, -0.0187684, -0.111984)
text = "Submit Order"

[node name="soda" parent="." instance=ExtResource("12_xihcy")]
visible = false

[node name="RootNode" parent="soda" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.104296, 0, 0.169926)

[node name="soda_bottle" parent="soda/RootNode/Soda" index="0"]
transform = Transform3D(0.830565, 0, 0, 0, 0.830565, 0, 0, 0, 0.830565, 0.498331, 0, 4.49198)
material_override = SubResource("StandardMaterial3D_ubcov")

[node name="chips" parent="." instance=ExtResource("14_qrakg")]
visible = false

[node name="RootNode" parent="chips" index="0"]
transform = Transform3D(-0.0893132, 0.789527, 0.607182, 0.993662, 0.112405, 0, -0.0682506, 0.603334, -0.794563, 0.336528, 0.087339, 0.0484171)

[node name="chip_bag1" parent="chips/RootNode/Chips" index="0"]
transform = Transform3D(0.984808, -0.173648, 0, 0.173648, 0.984808, 0, 0, 0, 1, 0, -0.270791, 5.85469)
material_override = SubResource("StandardMaterial3D_p0vgt")

[node name="fries" parent="." instance=ExtResource("10_c2qvc")]
transform = Transform3D(0.079164, 0, -0.796074, 0, 0.8, 0, 0.796074, 0, 0.079164, -0.0810807, -0.07098, 0.0475836)
visible = false

[node name="Fry" parent="fries/RootNode" index="0"]
transform = Transform3D(-0.657612, 6.668e-17, 0.239351, 8.05343e-17, 0.827508, 5.63907e-17, -0.239351, 9.52289e-17, -0.657612, 0, 0, 0)

[node name="frybox" parent="fries/RootNode/Fry" index="0"]
transform = Transform3D(0.114438, 1.86191e-33, 6.93889e-18, -1.86191e-33, 0.114438, -2.25712e-33, -6.93889e-18, 2.25712e-33, 0.114438, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_cbeqh")

[node name="fries" parent="fries/RootNode/Fry" index="1"]
transform = Transform3D(0.114438, 1.15805e-23, 0, 0, 0.114438, 0, 0, -1.98523e-23, 0.114438, 0.00149274, -0.0219489, 0.288305)
material_override = SubResource("StandardMaterial3D_dysfr")

[node name="ClearPlate" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.611252, 0, 0)
script = ExtResource("21_hcyh8")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ClearPlate"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.145589, 0.0929727, -0.0127743)
shape = SubResource("BoxShape3D_sf3ox")

[node name="Label3D" type="Label3D" parent="ClearPlate"]
transform = Transform3D(-0.4, 0, -6.03983e-08, 0, 0.4, 0, 6.03983e-08, 0, -0.4, -0.158442, 0.0984033, -0.12582)
text = "Clear Plate"

[node name="hot_dog_bun" parent="." instance=ExtResource("22_8mlvg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.50148, -1.31141, 1.36157)
visible = false

[node name="full_dog" parent="." instance=ExtResource("23_jc7b7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.501, -1.311, 0.922083)
visible = false

[connection signal="clear_plate" from="ClearPlate" to="StaticBody3D" method="_on_clear_plate_clear_plate"]

[editable path="Root Scene"]
[editable path="bottom_bun"]
[editable path="patty"]
[editable path="onions"]
[editable path="lettuce"]
[editable path="tomatoes"]
[editable path="cheese"]
[editable path="top_bun"]
[editable path="soda"]
[editable path="chips"]
[editable path="fries"]
